pluralsight-webinars/2021-04-docker-kubernetes-quickstart/kubernetes/apod/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apod
  labels:
    pswebinar: "21.04"
