pluralsight-webinars/2021-04-docker-kubernetes-quickstart/kubernetes/apod/apod-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: apod-api
  namespace: apod
spec:
  ports:
    - port: 80
      targetPort: api
  selector:
    app: apod-api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apod-api
  namespace: apod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apod-api
  template:
    metadata:
      labels:
        app: apod-api
    spec:
      containers:
        - name: api
          image: psdockerprod/image-of-the-day:m4-v2
          ports:
            - containerPort: 80
              name: api
          readinessProbe:
            httpGet:
              path: /image
              port: 80
            periodSeconds: 10
          livenessProbe:
            exec:
                command: ["java", "DependencyCheck", "0"]
            periodSeconds: 300
            initialDelaySeconds: 10
            failureThreshold: 2
      volumes:
        - name: config
          configMap:
            name: apod-api-config
      nodeSelector:
        kubernetes.io/os: linux
