pluralsight-webinars/2021-04-docker-kubernetes-quickstart/kubernetes/apod/apod-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: apod-web
  namespace: apod
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app: apod-web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apod-web
  namespace: apod
spec:
  selector:
    matchLabels:
      app: apod-web
  template:
    metadata:
      labels:
        app: apod-web
    spec:
      containers:
        - name: web
          image: psdockerprod/image-gallery:m4
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: config
              mountPath: "/app/config-override"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: apod-web-config
      nodeSelector:
        kubernetes.io/os: linux
